[package]
name = "wgpuhelloworld"
version = "0.1.0"
authors = ["Hagsteel <me@hagsteel.com>"]
edition = "2018"
description = "trying out wgpu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
winit = "0.23.0"
cgmath = "0.17.0"
log = "0.4.11"
# wgpu = "0.7.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }

futures = "0.3.7"
bytemuck = "1.4.1"

[build-dependencies]
anyhow = "1.0.33"
fs_extra = "1.2.0"
glob = "0.3.0"
shaderc = "0.6.3"
